flux/apps/litellm/endpoint_slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: litellm
  labels:
    kubernetes.io/service-name: litellm
    endpointslice.kubernetes.io/managed-by: fluxcd

addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.177
    conditions:
      ready: true
ports:
  - port: 80
    protocol: TCP
    name: http
