flux/apps/litellm/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: litellm

subsets:
  - addresses:
      - ip: 192.168.1.177
    ports:
      - port: 80
        protocol: TCP
        name: http
