flux/apps/litellm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
